[package]
name = "bifrost"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.7.5", features = ["macros"] }
axum-core = "0.4.3"
axum-server = { version = "0.6.0", features = ["rustls", "tls-rustls"] }
bytes = "1.6.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["color", "derive"] }
colog = "1.3.0"
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
futures = "0.3.30"
hyper = "1.4.1"
log = "0.4.22"
mac_address = { version = "1.1.7", features = ["serde"] }
mdns-sd = "0.11.1"
mime = "0.3.17"
rand = "0.8.5"
rumqttc = "0.24.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["normalize-path", "trace"] }
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["serde", "v4", "v5"] }

# rumqttc = "0.24.0"
