[package]
name = "bifrost"
version = "0.1.0"
edition = "2021"

[features]
default = ["server", "server-banner"]

server = []
server-banner = ["server", "dep:termcolor", "dep:itertools"]

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.7.5", features = ["macros"] }
axum-core = "0.4.3"
axum-server = { version = "0.6.0", features = ["rustls", "tls-rustls"] }
bytes = "1.6.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["color", "derive"] }
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
futures = "0.3.30"
hyper = "1.4.1"
iana-time-zone = "0.1.60"
log = "0.4.22"
mac_address = { version = "1.1.7", features = ["serde"] }
mdns-sd = "0.11.1"
mime = "0.3.17"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-tungstenite = "0.23.1"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["normalize-path", "trace"] }
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["serde", "v4", "v5"] }
pretty_env_logger = "0.5.0"
camino = "1.1.8"
x509-cert = { version = "0.2.5", features = ["builder", "hazmat"] }
rsa = "0.9.6"
sha2 = { version = "0.10.8", features = ["oid"] }
p256 = "0.13.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
ecdsa = { version = "0.16.9", features = ["der"] }
der = { version = "0.7.9", features = ["oid"] }
sha1 = "0.10.6"
rustls-pemfile = "2.1.3"
termcolor = { version = "1.4.1", optional = true }
itertools = { version = "0.13.0", optional = true }
